changes for contact page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Lumia - Multipurpose responsive bootstrap website template</title>
+  <title>ISCS - Integrated Sensing Circuits and Systems Lab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -45,7 +45,7 @@
           <div class="container">
             <!-- logo -->
             <div class="logo">
-              <a href="index.html"><img src="assets/img/logo.png" alt="" /></a>
+              <a href="index.html">							<img src="assets/img/favicon.ico" alt="" />						</a>
             </div>
             <!-- end logo -->
             <!-- top menu -->
