--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Lumia - Multipurpose responsive bootstrap website template</title>
+  <title>ISCS - Integrated Sensing Circuits and Systems Lab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -44,7 +44,7 @@
             <!-- logo -->
             <div class="logo">
               <a href="index.html">
-								<img src="assets/img/logo.png" alt="" />
+								<img src="assets/img/favicon.ico" alt="" />
 							</a>
             </div>
             <!-- end logo -->
@@ -119,19 +119,19 @@
         <div class="row">
           <div class="span8">
             <ul class="breadcrumb">
-              <li><a href="#"><i class="icon-home"></i></a><i class="icon-angle-right"></i></li>
-              <li><a href="#">Pages</a><i class="icon-angle-right"></i></li>
+              <li><a href="index.html"><i class="icon-home"></i></a><i class="icon-angle-right"></i></li>
+              <li><a href="index.html">Home</a><i class="icon-angle-right"></i></li>
               <li class="active">Contact us</li>
             </ul>
           </div>
-          <div class="span4">
+          <!-- <div class="span4">
             <div class="search">
               <form class="input-append">
                 <input class="search-form" id="appendedPrependedInput" type="text" placeholder="Search here.." />
                 <button class="btn btn-dark" type="submit">Search</button>
               </form>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -145,22 +145,22 @@
                 <ul>
                   <li><label><strong>Phone : </strong></label>
                     <p>
-                      +900 888 707 123
+                      +1 817-272-1210
                     </p>
                   </li>
                   <li><label><strong>Email : </strong></label>
                     <p>
-                      name@yoursite.com
+                      jung@uta.edu
                     </p>
                   </li>
                   <li><label><strong>Adress : </strong></label>
                     <p>
-                      Pasar kambing 58 Suite X.110 Peterongan Semarang, Indonesia
+                      ISCS Design Lab, </br>Engineering Laboratory Building </br>501 W. First St. #204 B </br>Arlington, TX 76019
                     </p>
                   </li>
                 </ul>
               </div>
-              <div class="widget">
+              <!-- <div class="widget">
                 <h4 class="rheading">Find us on social networks<span></span></h4>
                 <ul class="social-links">
                   <li><a href="#" title="Twitter"><i class="icon-square icon-32 icon-twitter"></i></a></li>
@@ -169,18 +169,17 @@
                   <li><a href="#" title="Linkedin"><i class="icon-square icon-32 icon-linkedin"></i></a></li>
                   <li><a href="#" title="Pinterest"><i class="icon-square icon-32 icon-pinterest"></i></a></li>
                 </ul>
-              </div>
+              </div> -->
             </aside>
           </div>
           <div class="span8">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+            <iframe src="https://maps.google.com/maps?q=Building%20501%20W.%20First%20St.%20%23204%20B%20Arlington%2C%20TX%2076019&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
             <div class="spacer30">
             </div>
-
+<!-- 
             <div id="sendmessage">Your message has been sent. Thank you!</div>
-            <div id="errormessage"></div>
-            <form action="" method="post" role="form" class="contactForm">
+            <div id="errormessage"></div> -->
+            <!-- <form action="" method="post" role="form" class="contactForm">
               <div class="row">
                 <div class="span4 form-group">
                   <input type="text" name="name" class="input-block-level" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -203,7 +202,7 @@
                   </div>
                 </div>
               </div>
-            </form>
+            </form> -->
           </div>
         </div>
       </div>
@@ -213,7 +212,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="span4">
+          <!-- <div class="span4">
             <div class="widget">
               <h5>Interesting pages</h5>
               <ul class="regular">
@@ -224,8 +223,8 @@
                 <li><a href="#">Get in touch with us</a></li>
               </ul>
             </div>
-          </div>
-          <div class="span4">
+          </div> -->
+          <!-- <div class="span4">
             <div class="widget">
               <h5>Flickr photostream</h5>
               <div class="flickr-badge">
@@ -234,8 +233,8 @@
               </div>
               <div class="clear"></div>
             </div>
-          </div>
-          <div class="span4">
+          </div> -->
+          <!-- <div class="span4">
             <div class="widget">
               <h5>How to find us</h5>
               <address>
@@ -257,30 +256,32 @@
                 <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
               </ul>
             </div>
+          </div> -->
+          <div class="container">
+            <div class="row">
+              <div class="span6 offset3">
+                  <img alt="The University of Texas at Arlington" height="73" src="assets/img/favicon.ico" width="82"></img>
+                  <p><strong>© 2019 Department and Center Information</strong><br>
+                     ISCS Design Lab, Engineering Laboratory Building 501 W. First St. #204 B Arlington, TX 76019<br>
+                     Phone/Fax: 817-272-1210<br>
+                     Email: jung@uta.edu<br>
+                     <a href="http://www.uta.edu/"> ©
+                     2019  The University of Texas at Arlington</a>.
+                  </p>
+                 <!-- </footer> -->
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <div class="verybottom">
         <div class="container">
           <div class="row">
-            <div class="span6">
+            <!-- <div class="span6">
               <p>
-                &copy; Lumia - All right reserved
+                &copy; ISCS - All right reserved
               </p>
-            </div>
-            <div class="span6">
-              <div class="pull-right">
-                <div class="credits">
-                  <!--
-                    All the links in the footer should remain intact.
-                    You can delete the links only if you purchased the pro version.
-                    Licensing information: https://bootstrapmade.com/license/
-                    Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Lumia
-                  -->
-                  Created by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                </div>
-              </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
