--- a/animations.html
+++ b/animations.html
@@ -84,7 +84,7 @@
                     </ul>
                   </li>
                   <li class="dropdown">
-                    <a href="#"><i class="icon-briefcase"></i> Portfolio <i class="icon-angle-down"></i></a>
+                    <a href="#"><i class="icon-briefcase"></i> Gallery <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
                       <li><a href="portfolio-2cols.html">Portfolio 2 columns</a></li>
                       <li><a href="portfolio-3cols.html">Portfolio 3 columns</a></li>
@@ -93,7 +93,7 @@
                     </ul>
                   </li>
                   <li class="dropdown">
-                    <a href="#"><i class="icon-book"></i> Blog <i class="icon-angle-down"></i></a>
+                    <a href="#"><i class="icon-book"></i> Projects <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
                       <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
                       <li><a href="blog-right-sidebar.html">Blog right sidebar</a></li>
@@ -274,7 +274,7 @@
                 <li><a href="#">How we do all stuff</a></li>
                 <li><a href="#">Our recent works</a></li>
                 <li><a href="#">Press releases</a></li>
-                <li><a href="#">Get in touch with us</a></li>
+                <li><a href="contact.html">Get in touch with us</a></li>
               </ul>
             </div>
           </div>
@@ -318,7 +318,7 @@
           <div class="row">
             <div class="span6">
               <p>
-                &copy; Lumia - All right reserved
+                &copy; ISCS - All right reserved
               </p>
             </div>
             <div class="span6">
