changes for footer and project detail

--- a/index.html
+++ b/index.html
@@ -120,22 +120,22 @@
             <!-- Place somewhere in the <body> of your page -->
             <div id="mainslider" class="flexslider">
               <ul class="slides">
-                <li data-thumb="assets/img/slides/flexslider/img1.jpg">
-                  <img src="assets/img/slides/flexslider/img1.jpg" alt="" />
+                <li data-thumb="assets/img/slides/flexslider/AMIC1.jpg">
+                  <img src="assets/img/slides/flexslider/AMIC1.jpg" alt="" />
                   <div class="flex-caption primary">
                     <h2>Bootstrap</h2>
                     <p>Lorem ipsum dolor sit amet vix ceteros noluisse intellegat</p>
                   </div>
                 </li>
-                <li data-thumb="assets/img/slides/flexslider/img2.jpg">
-                  <img src="assets/img/slides/flexslider/img2.jpg" alt="" />
+                <li data-thumb="assets/img/slides/flexslider/AMIC2.jpg">
+                  <img src="assets/img/slides/flexslider/AMIC2.jpg" alt="" />
                   <div class="flex-caption warning">
                     <h2>Responsive layout</h2>
                     <p>Lorem ipsum dolor sit amet vix ceteros noluisse intellegat</p>
                   </div>
                 </li>
-                <li data-thumb="assets/img/slides/flexslider/img3.jpg">
-                  <img src="assets/img/slides/flexslider/img3.jpg" alt="" />
+                <li data-thumb="assets/img/slides/flexslider/AMIC3.jpg">
+                  <img src="assets/img/slides/flexslider/AMIC2.jpg" alt="" />
                   <div class="flex-caption success">
                     <h2>Rich of features</h2>
                     <p>Lorem ipsum dolor sit amet vix ceteros noluisse intellegat</p>
@@ -156,180 +156,23 @@
             <div class="call-action">
 
               <div class="text">
-                <h2>You should love this stand out call action</h2>
-                <p>
-                  Hover this call action box and see the call action button play nice animation to seek attention
-                </p>
+                <h2>Welcome to Integrated Sensing Circuits and Systems Laboratory</h2>
+                <p>The Integrated Sensing Circuits and Systems Laboratory was founded in Fall of 2002. We are part of the <a href="http://www.uta.edu/ee/">Electrical Engineering Department</a> at The University of Texas at Arlington. Our mission is to provide an outstanding educational experience for MS and PhD students through challenging research and top quality VLSI classes. And to minimize the gap between academic education and real life experience through promoting industrial interaction and co- development that will advance the field of IC design.</p>
+                     <div id="extra-text">
+                        <p>We are the research group dedicated to discovering and learning about integrated circuit design at the University of Texas at Arlington. We are a diverse group that studies topics ranging from wireless applications to sensor systems.</p>
+                        <p>As an established research group at UTA, we have collaborated with scholars around the world to improve existing IC designs while also seeking new innovative designs to solve new problems concurrently. For more information on what we have completed and our published works, please visit the <a href="https://showcaseprojects.iscs.uta.cloud/">Projects</a> and the <a href="https://publishedworks.iscs.uta.cloud/"> Published Works</a> page.</p>
+                        <p>If you have any questions or would like to contact us, our contact information can be found <a href="http://currentmember.iscs.uta.cloud/">here</a>.</p>
+                     </div>
               </div>
-              <div class="cta">
+              <!-- <div class="cta">
                 <a class="btn btn-large btn-theme" href="#">
 							<i class="icon-plane icon-white"></i> Get a quote </a>
-              </div>
+              </div> -->
 
             </div>
             <!-- end tagline -->
           </div>
         </div>
-
-        <div class="row">
-          <div class="span3 features e_pulse">
-            <img src="assets/img/dummies/img1.jpg" alt="" />
-            <div class="box">
-              <div class="divcenter">
-                <a href="#"><i class="icon-circled icon-48 icon-magic active icon"></i></a>
-                <h4>Responsive <br />twitter bootstrap</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="span3 features e_pulse">
-            <img src="assets/img/dummies/img2.jpg" alt="" />
-            <div class="box">
-              <div class="divcenter">
-                <a href="#"><i class="icon-circled icon-48 icon-briefcase icon"></i></a>
-                <h4>Unparalleled <br />premium support</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="span3 features e_pulse">
-            <img src="assets/img/dummies/img3.jpg" alt="" />
-            <div class="box">
-              <div class="divcenter">
-                <a href="#"><i class="icon-circled icon-48 icon-cogs icon"></i></a>
-                <h4>Valid <br />HTML code</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="span3 features e_pulse">
-            <img src="assets/img/dummies/img4.jpg" alt="" />
-            <div class="box">
-              <div class="divcenter">
-                <a href="#"><i class="icon-circled icon-48 icon-bullhorn icon"></i></a>
-                <h4>Flexible <br />multi usage</h4>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="span12">
-            <h4 class="rheading">Recent works<span></span></h4>
-            <div class="row">
-              <div class="span3">
-
-                <p class="hidden-phone">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in lacus rhoncus elit egestas luctus. Nullam at lectus augue.
-                </p>
-
-                <a href="#" class="btn btn-theme">Read More</a>
-              </div>
-
-              <div class="span9">
-                <div id="latest-work" class="carousel btleft">
-                  <div class="carousel-wrapper">
-                    <ul class="da-thumbs">
-
-                      <li>
-                        <img src="assets/img/dummies/work1.jpg" alt="" />
-                        <article class="da-animate da-slideFromRight">
-                          <a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg">
-														<i class="icon-zoom-in icon-rounded icon-48 active"></i>
-													</a>
-                          <a href="portfolio-detail.html">
-														<i class="icon-link icon-rounded icon-48 active"></i>
-													</a>
-                          <div class="hidden-tablet">
-                            <p>Serenity theme</p>
-                          </div>
-                        </article>
-                      </li>
-
-                      <li>
-                        <img src="assets/img/dummies/work2.jpg" alt="" />
-                        <article class="da-animate da-slideFromRight">
-                          <a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg">
-														<i class="icon-zoom-in icon-rounded icon-48 active"></i>
-													</a>
-                          <a href="portfolio-detail.html">
-														<i class="icon-link icon-rounded icon-48 active"></i>
-													</a>
-                          <div class="hidden-tablet">
-                            <p>Dark apps</p>
-                          </div>
-                        </article>
-                      </li>
-
-                      <li>
-                        <img src="assets/img/dummies/work3.jpg" alt="" />
-                        <article class="da-animate da-slideFromRight">
-                          <a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg">
-														<i class="icon-zoom-in icon-rounded icon-48 active"></i>
-													</a>
-                          <a href="portfolio-detail.html">
-														<i class="icon-link icon-rounded icon-48 active"></i>
-													</a>
-                          <div class="hidden-tablet">
-                            <p>Mobile apps</p>
-                          </div>
-                        </article>
-                      </li>
-
-                      <li>
-                        <img src="assets/img/dummies/work4.jpg" alt="" />
-                        <article class="da-animate da-slideFromRight">
-                          <a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg">
-														<i class="icon-zoom-in icon-rounded icon-48 active"></i>
-													</a>
-                          <a href="portfolio-detail.html">
-														<i class="icon-link icon-rounded icon-48 active"></i>
-													</a>
-                          <div class="hidden-tablet">
-                            <p>Mobile template</p>
-                          </div>
-                        </article>
-                      </li>
-
-                      <li>
-                        <img src="assets/img/dummies/work5.jpg" alt="" />
-                        <article class="da-animate da-slideFromRight">
-                          <a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg">
-														<i class="icon-zoom-in icon-rounded icon-48 active"></i>
-													</a>
-                          <a href="portfolio-detail.html">
-														<i class="icon-link icon-rounded icon-48 active"></i>
-													</a>
-                          <div class="hidden-tablet">
-                            <p>Business theme</p>
-                          </div>
-                        </article>
-                      </li>
-
-                      <li>
-                        <img src="assets/img/dummies/work6.jpg" alt="" />
-                        <article class="da-animate da-slideFromRight">
-                          <a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg">
-														<i class="icon-zoom-in icon-rounded icon-48 active"></i>
-													</a>
-                          <a href="portfolio-detail.html">
-														<i class="icon-link icon-rounded icon-48 active"></i>
-													</a>
-                          <div class="hidden-tablet">
-                            <p>Portfolio graphic</p>
-                          </div>
-                        </article>
-                      </li>
-
-                    </ul>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div>
-        </div>
-
       </div>
     </section>
     <!-- Footer
@@ -341,15 +184,15 @@
             <div class="widget">
               <h5>Interesting pages</h5>
               <ul class="regular">
-                <li><a href="#">About our company</a></li>
+                <li><a href="#">About our research areas</a></li>
                 <li><a href="#">How we do all stuff</a></li>
                 <li><a href="#">Our recent works</a></li>
-                <li><a href="#">Press releases</a></li>
+                <li><a href="#">Conference papers</a></li>
                 <li><a href="contact.html">Get in touch with us</a></li>
               </ul>
             </div>
           </div>
-          <div class="span4">
+          <!-- <div class="span4">
             <div class="widget">
               <h5>Flickr photostream</h5>
               <div class="flickr-badge">
@@ -358,21 +201,22 @@
               </div>
               <div class="clear"></div>
             </div>
-          </div>
+          </div> -->
           <div class="span4">
             <div class="widget">
               <h5>How to find us</h5>
-              <address>
-								<i class="icon-home"></i> <strong>Lumia company, Inc.</strong><br>
-								X104 Awesome ville, Suite AB12<br>
-								Jakarta 12420 Indonesia
+              <address> 
+								<i class="icon-home"></i> <strong>ISCS Design Lab,</strong><br>
+                Engineering Laboratory Building <br>
+                501 W. First #204 B<br>
+								Arlington, TX 76019
 								</address>
               <p>
-                <i class="icon-phone"></i> (123) 456-7890 - (123) 555-8890<br>
-                <i class="icon-envelope-alt"></i> email@domainname.com
+                <i class="icon-phone"></i> (817) 272-1210<br>
+                <i class="icon-envelope-alt"></i> jung@uta.edu
               </p>
             </div>
-            <div class="widget">
+            <!-- <div class="widget">
               <ul class="social">
                 <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-square icon-32"></i></a></li>
                 <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-square icon-32"></i></a></li>
@@ -380,7 +224,7 @@
                 <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest icon-square icon-32"></i></a></li>
                 <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -389,21 +233,8 @@
           <div class="row">
             <div class="span6">
               <p>
-                &copy; ISCS - All right reserved
+                &copy; 2019 Department and Center Information
               </p>
-            </div>
-            <div class="span6">
-              <div class="pull-right">
-                <div class="credits">
-                  <!--
-                    All the links in the footer should remain intact.
-                    You can delete the links only if you purchased the pro version.
-                    Licensing information: https://bootstrapmade.com/license/
-                    Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Lumia
-                  -->
-                  Created by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                </div>
-              </div>
             </div>
           </div>
         </div>
