--- a/components.html
+++ b/components.html
@@ -248,81 +248,69 @@
     </section>
     <!-- Footer
  ================================================== -->
-    <footer class="footer">
+ <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="span4">
+          <div class="widget">
+            <h5>Interesting pages</h5>
+            <ul class="regular">
+              <li><a href="#">About our research areas</a></li>
+              <li><a href="#">How we do all stuff</a></li>
+              <li><a href="#">Our recent works</a></li>
+              <li><a href="#">Conference papers</a></li>
+              <li><a href="contact.html">Get in touch with us</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- <div class="span4">
+          <div class="widget">
+            <h5>Flickr photostream</h5>
+            <div class="flickr-badge">
+              <script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=9&amp;display=random&amp;size=s&amp;layout=x&amp;source=user&amp;user=34178660@N03"></script>
+
+            </div>
+            <div class="clear"></div>
+          </div>
+        </div> -->
+        <div class="span4">
+          <div class="widget">
+            <h5>How to find us</h5>
+            <address> 
+              <i class="icon-home"></i> <strong>ISCS Design Lab,</strong><br>
+              Engineering Laboratory Building <br>
+              501 W. First #204 B<br>
+              Arlington, TX 76019
+              </address>
+            <p>
+              <i class="icon-phone"></i> (817) 272-1210<br>
+              <i class="icon-envelope-alt"></i> jung@uta.edu
+            </p>
+          </div>
+          <!-- <div class="widget">
+            <ul class="social">
+              <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-square icon-32"></i></a></li>
+              <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-square icon-32"></i></a></li>
+              <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-square icon-32"></i></a></li>
+              <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest icon-square icon-32"></i></a></li>
+              <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
+            </ul>
+          </div> -->
+        </div>
+      </div>
+    </div>
+    <div class="verybottom">
       <div class="container">
         <div class="row">
-          <div class="span4">
-            <div class="widget">
-              <h5>Interesting pages</h5>
-              <ul class="regular">
-                <li><a href="#">About our company</a></li>
-                <li><a href="#">How we do all stuff</a></li>
-                <li><a href="#">Our recent works</a></li>
-                <li><a href="#">Press releases</a></li>
-                <li><a href="contact.html">Get in touch with us</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="span4">
-            <div class="widget">
-              <h5>Flickr photostream</h5>
-              <div class="flickr-badge">
-                <script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=9&amp;display=random&amp;size=s&amp;layout=x&amp;source=user&amp;user=34178660@N03"></script>
-
-              </div>
-              <div class="clear"></div>
-            </div>
-          </div>
-          <div class="span4">
-            <div class="widget">
-              <h5>How to find us</h5>
-              <address>
-								<i class="icon-home"></i> <strong>Lumia company, Inc.</strong><br>
-								X104 Awesome ville, Suite AB12<br>
-								Jakarta 12420 Indonesia
-								</address>
-              <p>
-                <i class="icon-phone"></i> (123) 456-7890 - (123) 555-8890<br>
-                <i class="icon-envelope-alt"></i> email@domainname.com
-              </p>
-            </div>
-            <div class="widget">
-              <ul class="social">
-                <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-square icon-32"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-square icon-32"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-square icon-32"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest icon-square icon-32"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Google plus"><i class="icon-google-plus icon-square icon-32"></i></a></li>
-              </ul>
-            </div>
+          <div class="span6">
+            <p>
+              &copy; 2019 Department and Center Information
+            </p>
           </div>
         </div>
       </div>
-      <div class="verybottom">
-        <div class="container">
-          <div class="row">
-            <div class="span6">
-              <p>
-                &copy; ISCS - All right reserved
-              </p>
-            </div>
-            <div class="span6">
-              <div class="pull-right">
-                <div class="credits">
-                  <!--
-                    All the links in the footer should remain intact.
-                    You can delete the links only if you purchased the pro version.
-                    Licensing information: https://bootstrapmade.com/license/
-                    Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Lumia
-                  -->
-                  Created by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+    </div>
+  </footer>
 
   </div>
   <!-- end wrapper -->
