added publications changes

--- a/journal_publications.html
+++ b/journal_publications.html
@@ -13,7 +13,6 @@
   <link href="assets/css/prettyPhoto.css" rel="stylesheet">
   <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
   <link href="assets/css/flexslider.css" rel="stylesheet">
-
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/color/default.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,600,400italic|Open+Sans:400,600,700" rel="stylesheet">
@@ -56,14 +55,14 @@
                   <li>
                     <a href="index.html"><i class="icon-home"></i> Home </a>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                     <a href="#"><i class="icon-cog"></i> Published Works <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
                         <li><a href="journal_publications.html">Journal Publications</a></li>
                         <li><a href="conference_publications.html">Conference	Publications</a></li>
-                    </ul>
+                    </ul>  
                   </li>
-                  <li class="dropdown active">
+                  <li class="dropdown">
                     <a href="#"><i class="icon-leaf"></i> Pages <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
                       <li><a href="about.html">About us</a></li>
@@ -101,113 +100,58 @@
         </div>
       </div>
     </header>
-    <!-- Subintro
-================================================== -->
     <section id="subintro">
       <div class="container">
         <div class="row">
           <div class="span8">
             <ul class="breadcrumb">
               <li><a href="#"><i class="icon-home"></i></a><i class="icon-angle-right"></i></li>
-              <li><a href="#">Pages</a><i class="icon-angle-right"></i></li>
-              <li class="active">Testimonials</li>
+              <li><a href="#">Published Works</a><i class="icon-angle-right"></i></li>
+              <li class="active">Journal Publications</li>
             </ul>
           </div>
-          <div class="span4">
+          <!-- <div class="span4">
             <div class="search">
               <form class="input-append">
                 <input class="search-form" id="appendedPrependedInput" type="text" placeholder="Search here.." />
                 <button class="btn btn-dark" type="submit">Search</button>
               </form>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
-    <section id="maincontent">
+    <section id="maincontent" class="demo">
       <div class="container">
         <div class="row">
-          <div class="span8">
+          <div class="span12">
+            <h4 class="rheading">Journal Publications<span></span></h4>
             <div class="row">
-              <div class="span4">
-                <h4 class="rheading">Basic testimonial<span></span></h4>
-                <div class="testimonial">
-                  <blockquote>
-                    <p>
-                      <i class="icon-quote-left"></i> His menandri quaestio ea. Ea congue volutpat has, cu vim delenit offendit ullamcorper. Ius at agam malorum suscipiantur, sit aliquid percipitur ei.
-                    </p>
-                  </blockquote>
-                  <span class="author alignright">John doe, <a href="#">www.sitename.com</a></span>
-                  <div class="clear">
-                  </div>
-                </div>
+              <div class="span12">
+                <ol class="the-icons">
+                  <li> B. Arigong, H. Zhang, S. Yoon, S. Jung, and H. Kim, “An Eye-Opening Measurement Circuit for a Feed-Forward Equalizer,” Microwave and Optical Technology Letters, vol. 56, issue 9, pp. 2136-2141, September, 2014.</li><br>
+                  <li> C. Lim, S. Govardhan, H. Kim, K. Ryoo, and S. Jung, “A CMOS Switched Capacitor Based Low Power Amperometric Readout Circuit for Microneedle Glucose Sensor,” Journal of Low Power Electronics, vol. 10, no. 2, pp. 279-285, June, 2014.</li><br>
+                  <li> V. Shenoy, S. Jung, Y. Yoon, Y. Park, and H. Chung, “A CMOS Analog Correlator based Painless Non-enzymatic Glucose Sensor Readout Circuit,” IEEE Sensors Journal, vol. 14, pp. 1591-1599, May, 2014. ISSN: 1530-437X</li><br>
+                  <li> H. Kim, S. Woo, S. Jung, and K. Lee, “A CMOS transmitter leakage canceller for WCDMA applications,” IEEE Transactions on Microwave Theory and Techniques, vol. 61, pp. 3373-3380, September, 2013. ISSN: 0018-9480</li><br>
+                  <li> B. Arigong, H. Zhang, S. Jung, and H. Kim, “A Feed-Forward Equalizer with Winner-take-all Variable Gain Amplifiers for Backplane Channels,” Microwave and Optical Technology Letters, vol. 55, no. 11, pp. 2666-2670, November, 2013.</li><br>
+                  <li> J. Li, S. Jung, H. Kim, P. Gui, and H. Chung, “A Carrier-Based CMOS Impulse Generator for Ultra-wideband Vehicular Radar Application,” Microwave and Optical Technology Letters, vol. 55, no. 8, pp. 1881-1887, August, 2013.</li><br>
+                  <li> Y. Joo, H. Kim, and S. Jung, “A CMOS 802.15.4a Transmitter for Sub-GHz Applications,” Microwave and Optical Technology Letters, vol. 53, no. 8, pp. 1919-1921, August, 2011.</li><br>
+                  <li> J. Li, S. Jung, and H. Moon, “A Fully Integrated 3-10 GHz IR-UWB CMOS Impulse Generator,” Microwave and Optical Technology Letters, vol. 53, no. 8, pp. 1887-1890, August, 2011.</li><br>
+                  <li> H. Zhai, S. Jung, and M. Lu, “Wireless communication in boxes with metallic enclosure based on time-reversal ultra-wideband technique: a full-wave numerical study,” Progress In Electromagnetics Research, vol. PIER 101, pp. 63-74, March, 2010.</li><br>
+                  <li> N. Thakoor, J. Gao, and S. Jung “Embedded Planar Surface Segmentation System for Stereo Images,” Journal of Machine Vision and Applications, vol.21, no. 2, pp. 189-199, February, 2010.</li><br>
+                  <li> H. Zhai, S. Sha, V. Shenoy, S. Jung, M. Lu, K. Min, S. Lee, and D. Ha, “An Electronic Circuit System for Time-Reversal of Ultra-Wideband Short Impulses based on Frequency Domain Approach,” IEEE Transactions on Microwave Theory and Techniques, vol. 58, no. 1, pp. 74-86, January, 2010. ISSN: 0018-9480</li><br>
+                  <li> P. Ghosh, M. Lu, and S. Jung, “Design of a Radiation Hard Phase-Locked Loop at 2.5 GHz using SOS-CMOS,” Journal of Systems Engineering and Electronics, vol. 20, no. 6, pp. 1159-1166, December, 2009.</li><br>
+                  <li> M. Lu and S. Jung, “On the Well-Posedness of Integral Equations Associated with Cavity Green's Functions around Resonant Frequencies,” Microwave and Optical Technology Letter, vol. 51, no. 6, pp. 1476-1481, June, 2009.</li><br>
+                  <li> M. Lu, J. Bredow, S. Jung, S. Tjuatja, “Evaluation of Green’s Functions of Rectangular Cavities around Resonant Frequencies in the Method of Moments”, IEEE Antennas and Wireless Propagation Letters, vol. 8, pp. 204-208, April, 2009.</li><br>
+                  <li> N. Thakoor, J. Gao, and S. Jung “Hidden Markov model based weighted likelihood discriminant for 2D shape classification,” IEEE Transactions on Image Processing, vol. 16, Issue 11, pp. 2707-2719, November, 2007. ISSN: 1057-7149</li><br>
+                  <li> D. Park, Y. Jeong, J-B. Lee, and S. Jung, “Chip-level integration of RF MEMS on-chip inductors using UV-LIGA technique,” Journal of Microsystem Technologies, vol. 14, numbers 9-11, pp. 1429-1438, October, 2007.</li><br>
+                  <li> Guangbin Zhang, Sooping Saw, Jin Liu, Scott Sterrantino, David K. Johnson, and Sungyong Jung, “An Accurate Current Source with On-Chip Self-Calibration Circuits for Low-Voltage Current Mode Differnetial Drivers”, IEEE Transactions on Circuits and Systems I, vol. 53, Issue 1, pp. 40-47, January, 2006. ISSN: 1549-8328</li><br>
+                  <li> Sungyong Jung, Martin A. Brooke, and Nan Maire Jokerst, “Parasitic Modeling and Analysis for a 1 Gb/s CMOS Laser Driver”, IEEE Transactions on Circuits and Systems II, Vol. 51, No. 10, pp. 517- 522, October, 2004. ISSN: 1549-7747</li><br>
+                  <li> Jokerst, N.M.; Brooke, M.A.; Laskar, J.; Wills, D.S.; Brown, A.S.; Vrazel, M.; Jung, S.; Joo, Y.; Chang, J.J., “ Microsystem optoelectronic integration for mixed multisignal systems”, IEEE Journal of Selected Topics in Quantum Electronics, Vol. 6, Issue: 6, pp. 1231 –1239, Nov.-Dec. 2000. ISSN: 1077-260X</li><br>
+                  <li> Steven W. Bond, Oliver Vendier, Myunghee Lee, Sungyong Jung, Abelardo Lopez-Lagunas, Sek Chai, Georgianna Dagnall, M. Brooke, N. Jokerst, D. Wills, and April Brown, “A Three Layer 3D System Using Through-Si Vertical Optical Interconnections and Si CMOS Hybrid Building Blocks,” IEEE Journal of Selected Topics in Quantum Electronics, Vol.5, No. 2, pp. 276 – 286, March, 1999. ISSN: 1077-260X</li><br>
+                  <li> Oliver Vendier, Steven W. Bond, Myunghee Lee, Sungyong Jung, M. Brooke, N. Jokerst, and R.P. Leavitt, “Stacked Silicon CMOS Circuits with a 40 Mb/s Through-Silicon Optical Interconnect,” IEEE Photonics Technology Letters, vol. 10, no. 4, pp. 606-608, April, 1998. ISSN: 1041-1135</li><br>
+                </ol>
               </div>
-              <div class="span4">
-                <h4 class="rheading">Boxed testimonial<span></span></h4>
-                <div class="box">
-                  <div class="testimonial">
-                    <blockquote>
-                      <p>
-                        <i class="icon-quote-left"></i> His menandri quaestio ea. Ea congue volutpat has, cu vim delenit offendit ullamcorper. Ius at agam malorum suscipiantur, sit aliquid percipitur ei.
-                      </p>
-                    </blockquote>
-                    <span class="author alignright">John doe, <a href="#">www.sitename.com</a></span>
-                    <div class="clear">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="span4">
-                <h4 class="rheading">Testimonial with avatar<span></span></h4>
-                <div class="testimonial">
-                  <blockquote>
-                    <p>
-                      <i class="icon-quote-left"></i> His menandri quaestio ea. Ea congue volutpat has, cu vim delenit offendit ullamcorper. Ius at agam malorum suscipiantur, sit aliquid percipitur ei.
-                    </p>
-                  </blockquote>
-                  <img src="assets/img/dummies/author-40.png" class="img-circle left" alt="" />
-                  <span class="author">John doe</span><br />
-                  <a href="#">www.sitename.com</a>
-                </div>
-              </div>
-              <div class="span4">
-                <h4 class="rheading">Boxed testimonial avatar<span></span></h4>
-                <div class="box">
-                  <div class="testimonial">
-                    <blockquote>
-                      <p>
-                        <i class="icon-quote-left"></i> His menandri quaestio ea. Ea congue volutpat has, cu vim delenit offendit ullamcorper. Ius at agam malorum suscipiantur, sit aliquid percipitur ei.
-                      </p>
-                    </blockquote>
-                    <img src="assets/img/dummies/author-40.png" class="img-circle left" alt="" />
-                    <span class="author">John doe</span><br />
-                    <a href="#">www.sitename.com</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="span4">
-            <aside>
-              <div class="widget">
-                <h4 class="rheading">Pages<span></span></h4>
-                <ul class="cat">
-                  <li><a href="about.html">About us</a></li>
-                  <li><a href="contact.html">Contact us</a></li>
-                  <li><a href="#">Our portfolio</a></li>
-                  <li><a href="#">Privacy policy</a></li>
-                </ul>
-              </div>
-              <div class="widget">
-                <h4 class="rheading">Video widget<span></span></h4>
-                <div class="video-container">
-                  <iframe src="http://player.vimeo.com/video/30585464?title=0&amp;byline=0">
-						</iframe>
-                </div>
-              </div>
-            </aside>
           </div>
         </div>
       </div>
@@ -277,6 +221,7 @@
       </div>
     </div>
   </footer>
+
   </div>
   <!-- end wrapper -->
   <a href="#" class="scrollup"><i class="icon-chevron-up icon-square icon-48 active"></i></a>
