--- a/buttons.html
+++ b/buttons.html
@@ -56,23 +56,11 @@
                     <a href="index.html"><i class="icon-home"></i> Home </a>
                   </li>
                   <li class="dropdown active">
-                    <a href="#"><i class="icon-cog"></i> Features <i class="icon-angle-down"></i></a>
+                    <a href="#"><i class="icon-cog"></i> Published Works <i class="icon-angle-down"></i></a>
                     <ul class="dropdown-menu">
-                      <li><a href="media.html">Media</a></li>
-                      <li><a href="color-scheme.html">8 Theme colors</a></li>
-                      <li><a href="buttons.html">Buttons</a></li>
-                      <li><a href="components.html">Components</a></li>
-                      <li><a href="animations.html">56 Animations</a></li>
-                      <li><a href="icons.html">Icons</a></li>
-                      <li><a href="icon-variations.html">Icon variations</a></li>
-                      <li class="dropdown"><a href="#">3rd level <i class="icon-angle-right"></i></a>
-                        <ul class="dropdown-menu sub-menu">
-                          <li><a href="#">Example menu</a></li>
-                          <li><a href="#">Example menu</a></li>
-                          <li><a href="#">Example menu</a></li>
-                        </ul>
-                      </li>
-                    </ul>
+                        <li><a href="journal_publications.html">Journal Publications</a></li>
+                        <li><a href="conference_publications.html">Conference	Publications</a></li>
+                      </ul>  
                   </li>
                   <li class="dropdown">
                     <a href="#"><i class="icon-leaf"></i> Pages <i class="icon-angle-down"></i></a>
